<resources>
    <string name="app_name">又拍云短视频</string>
    <string name="lsq_sdk_name">TuSDK 涂图</string>
    <string name="lsq_exit_info">再按一次将退出应用</string>
    <string name="lsq_text">TuSDK 涂图</string>
    <string name="lsq_reset">重置</string>
    <string name="lsq_initing">正在初始化</string>
    <string name="lsq_inited">初始化完成</string>
    <string name="lsq_carema_no_access">无法访问系统相机，请在\r\n设置&#045;&#062;应用程序&#045;&#062;权限&#045;&#062;%1$s&#034; \r\n开启 相机</string>
    <string name="lsq_refresh_list_view_state_visible">下拉刷新</string>
    <string name="lsq_refresh_list_view_state_hidden">加载完成</string>
    <string name="lsq_refresh_list_view_state_triggered">释放开始刷新</string>
    <string name="lsq_refresh_list_view_state_loading">正在加载&#8230;</string>
    <string name="lsq_refresh_list_view_state_lasttime">上次刷新时间：</string>
    <string name="lsq_refresh_list_view_state_load_more">正在加载更多&#8230;</string>
    <string name="lsq_filter_set_smoothing">润滑</string>
    <string name="lsq_filter_set_whitening">白皙</string>
    <string name="lsq_filter_set_mixied">效果</string>
    <string name="lsq_filter_set_vignette">暗角</string>
    <string name="lsq_filter_set_saturation">饱和</string>
    <string name="beauty_on">美颜已开启</string>
    <string name="beauty_off">美颜已关闭</string>
    <string name="lsq_filter_None">无效果</string>
    <string name="lsq_filter_Original">原始</string>
    <string name="lsq_filter_Fair01">白皙</string>
    <string name="lsq_filter_Pink01">粉嫩</string>
    <string name="lsq_filter_Forest01">小森林</string>
    <string name="lsq_filter_Sundown">日不落</string>
    <string name="lsq_filter_Sakura">樱花草</string>
    <string name="lsq_filter_Paul01">阿宝色</string>
    <string name="lsq_filter_Lavender">薰衣草</string>
    <string name="lsq_filter_Manhattan">曼哈顿</string>
    <string name="lsq_filter_Dusk">黄昏</string>
    <string name="lsq_filter_TinyTimes">小时代</string>
    <string name="lsq_filter_Vivid01">小清新</string>
    <string name="lsq_filter_Year1950">1950s</string>
    <string name="lsq_filter_Missing01">想你色</string>
    <string name="lsq_filter_Grapefruit01">西柚色</string>
    <string name="lsq_filter_BabyPink001">粉色</string>
    <string name="lsq_filter_gaosi_01">高斯</string>
    <string name="live_camera_sample">直播相机示例</string>
    <string name="record_camera_sample">"视频录制示例</string>
    <string name="edit_camera_sample">视频编辑示例</string>
    <string name="new_movie_saving">正在保存视频...</string>
    <string name="lsq_editor_load_error">视频加载出错</string>
    <string name="new_movie_audio_effect_loading">正在加载音效</string>
    <string name="new_movie_saved">视频已成功保存</string>
    <string name="new_movie_error_saving">视频保存时出错</string>
    <string name="lsq_loadvideo_failed">不支持的视频格式或视频宽高过大</string>
    <string name="lsq_compress_failed">不支持非H.264视频的压缩</string>
    <string name="over_max_recordTime">超过录制时长</string>
    <string name="min_recordTime">录制时长尚不足 </string>
    <string name="max_recordTime">已到达最大录制时长 </string>
    <string name="lsq_video_save_ok">视频保存成功</string>
    <string name="lsq_video_del_ok">视频删除成功</string>
    <string name="lsq_image_save_ok">图片保存成功</string>
    <string name="lsq_image_del_ok">图片删除成功</string>
    <string name="lsq_record_movie_error">录制视频出错</string>
    <string name="lsq_record_time_invalid">录制时间过短</string>
    <string name="lsq_not_file">文件不存在</string>
    <string name="lsq_filter_SkinPink010">粉嫩</string>
    <string name="lsq_filter_SkinJelly010">果冻</string>
    <string name="lsq_filter_Fair010">白皙</string>
    <string name="lsq_filter_Pink010">淡雅</string>
    <string name="lsq_filter_Forest010">小森林</string>
    <string name="lsq_filter_SkinPink011">粉嫩</string>
    <string name="lsq_filter_SkinJelly011">果冻</string>
    <string name="lsq_filter_Pink011">淡雅</string>
    <string name="lsq_filter_Fair011">白皙</string>
    <string name="lsq_filter_Forest011">小森林</string>
    <string name="lsq_dermabrasion">磨皮</string>
    <string name="lsq_big_eyes">大眼</string>
    <string name="lsq_thin_face">瘦脸</string>
    <string name="lsq_filter_nature">自然</string>
    <string name="lsq_filter_pink">粉嫩</string>
    <string name="lsq_filter_jelly">果冻</string>
    <string name="lsq_filter_ruddy">红润</string>
    <string name="lsq_filter_sugar">糖水色</string>
    <string name="lsq_filter_honey">蜜粉</string>
    <string name="lsq_filter_clear">原麦</string>
    <string name="lsq_filter_timber">小森林</string>
    <string name="lsq_filter_whitening">美白</string>
    <string name="lsq_filter_porcelain">青花瓷</string>
    <string name="lsq_filter_Olympus_1">奥林巴斯</string>
    <string name="lsq_filter_Leica_1">莱卡</string>
    <string name="lsq_filter_Gold_1">金黄</string>
    <string name="lsq_filter_Cheerful_1">愉悦</string>
    <string name="lsq_filter_White_1">纯白</string>
    <string name="lsq_filter_s1950_1">1950s</string>
    <string name="lsq_filter_Blurred_1">迷离</string>
    <string name="lsq_filter_Newborn_1">新生</string>
    <string name="lsq_filter_Fade_1">褪色</string>
    <string name="lsq_filter_NewYork_1">纽约</string>
    <string name="lsq_filter_LiveShake01">抖动</string>
    <string name="lsq_filter_LiveMegrim01">幻觉</string>
    <string name="lsq_filter_EdgeMagic01">魔法</string>
    <string name="lsq_filter_LiveFancy01_1">70s</string>
    <string name="lsq_filter_LiveSoulOut01">灵魂出窍</string>
    <string name="lsq_filter_LiveSignal01">信号</string>
    <string name="lsq_filter_LiveLightning01">闪电</string>
    <string name="lsq_filter_LiveXRay01">X光</string>
    <string name="lsq_filter_LiveHeartbeat01">心跳</string>
    <string name="lsq_filter_LiveMirrorImage01">镜像</string>
    <string name="lsq_filter_LiveSlosh01">晃动</string>
    <string name="lsq_filter_LiveOldTV01">旧电视</string>
    <string name="lsq_filter_repeated">反复</string>
    <string name="lsq_filter_slowmotion">慢动作</string>
    <string name="lsq_filter_reverse">逆转时光</string>
    <string name="lsq_filter_FadeIn">淡入</string>
    <string name="lsq_filter_FlashLight">黑场过度</string>
    <string name="lsq_filter_Flip">翻转</string>
    <string name="lsq_filter_FlyIn">飞入</string>
    <string name="lsq_filter_FocusIn">圆形缩小</string>
    <string name="lsq_filter_FocusOut">圆形扩大</string>
    <string name="lsq_filter_PullInTop">上升</string>
    <string name="lsq_filter_PullInBottom">下降</string>
    <string name="lsq_filter_PullInLeft">左入</string>
    <string name="lsq_filter_PullInRight">右入</string>
    <string name="lsq_filter_SpreadIn">扩散</string>
    <string name="lsq_filter_StackUp">叠起</string>
    <string name="lsq_filter_Zoom">放大</string>
    <string name="lsq_text_record">录制视频</string>
    <string name="lsq_text_import">导入视频</string>
    <string name="lsq_text_sticker">动态贴纸</string>
    <string name="lsq_text_filter">智能美颜</string>
    <string name="lsq_text_time_tv">00:00</string>
    <string name="lsq_tusdk">TuSDK</string>
    <string name="lsq_back">返回</string>
    <string name="lsq_clip">剪辑</string>
    <string name="lsq_next">下一步</string>
    <string name="lsq_stepback">后退</string>
    <string name="lsq_text_confirm">确认</string>
    <string name="lsq_save">保存</string>
    <string name="lsq_add_filter">视频编辑</string>
    <string name="lsq_video_empty_error">视频路径为空</string>
    <string name="lsq_video_play_error">视频播放错误</string>
    <string name="lsq_video_read_prepare">正在读取视频,请稍等...</string>
    <string name="lsq_video_entry_company">杭州微禾迅科技有限公司</string>
    <string name="lsq_button_done">我知道了</string>
    <string name="lsq_carema_alert_title">无法开启相机</string>
    <string name="lsq_album_import">相册导入</string>
    <string name="lsq_time_effect_text">时间特效</string>
    <string name="lsq_text_beauty_type">微整形</string>
    <string name="lsq_text_cosmetic_type">美妆</string>
    <string name="lsq_beauty_text">美颜</string>
    <string name="lsq_text_beauty">美肤</string>
    <string name="lsq_filter_text">滤镜</string>
    <string name="lsq_magic_text">魔法</string>
    <string name="lsq_sticker_text">贴纸</string>
    <string name="lsq_text_MV">MV</string>
    <string name="lsq_text_cover">封面</string>
    <string name="lsq_text_effect">特效</string>
    <string name="lsq_text_text_effect">文字</string>
    <string name="lsq_music_text">配乐</string>
    <string name="lsq_repeal">撤销</string>
    <string name="lsq_text_comics">漫画</string>
    <string name="lsq_mv_小猫玩球">猫球球</string>
    <string name="lsq_mv_无语乌鸦">无语乌鸦</string>
    <string name="lsq_mv_怪兽">怪兽</string>
    <string name="lsq_mv_none">无效果</string>
    <string name="lsq_mv_汤圆">汤圆</string>
    <string name="lsq_mv_儿童节">儿童节</string>
    <string name="lsq_mv_圆形遮罩">圆形遮罩</string>
    <string name="lsq_mv_老电影">老电影</string>
    <string name="lsq_mv_流光">流光</string>
    <string name="lsq_text_recordEdit">录制视频</string>
    <string name="lsq_text_componentList">功能列表</string>
    <string name="lsq_edit_component">编辑视频</string>
    <string name="lsq_record_dialog_title">提示</string>
    <string name="lsq_record_dialog_message">是否开启录音权限</string>
    <string name="lsq_record_dialog_confirm">确认</string>
    <string name="lsq_record_dialog_cancel">取消</string>
    <string name="lsq_text_delete">删除</string>
    <string name="lsq_composite_components">功能套件</string>
    <string name="lsq_common_components">常用组件</string>
    <string name="lsq_custom_components">自定义组件示例</string>
    <string name="lsq_api_usage_example">API 示例</string>
    <string name="lsq_record_video">录制视频</string>
    <string name="lsq_video_preview_editor">相册导入 + 裁剪 + 编辑</string>
    <string name="lsq_capture_record_camera">拍照录制相机</string>
    <string name="lsq_keep_record_camera">断点续拍相机</string>
    <string name="lsq_normal_record_camera">正常录制相机</string>
    <string name="lsq_album_video_timecut">选择视频 + 时间裁剪</string>
    <string name="lsq_album_video_editor">相册导入 + 视频编辑</string>
    <string name="lsq_full_screen_record_preview_editor">全屏展示：断点续拍</string>
    <string name="lsq_full_screen_ratio_cut_editor">比例自适应：相册导入 + 时间裁剪 + 视频编辑</string>
    <string name="lsq_full_screen_album_video_timecut_editor">全屏展示：相册导入+时间裁剪+视频编辑</string>
    <string name="lsq_audio_mixed">多音轨混合</string>
    <string name="lsq_video_bgm">音视频混合</string>
    <string name="lsq_gain_thumbnail">获取缩略图</string>
    <string name="lsq_video_mixed">多视频及图像合成视频</string>
    <string name="lsq_video_player">视频播放器</string>
    <string name="lsq_album_video_timecut_save">视频时间裁剪</string>
    <string name="lsq_audio_file_recorder">录制音频</string>
    <string name="lsq_audio_engine_pitch">音频变声</string>
    <string name="lsq_camera_record_to_edit">录制转编辑</string>
    <string name="lsq_mixing_lively">欢快</string>
    <string name="lsq_mixing_oldmovie">老电影</string>
    <string name="lsq_mixing_relieve">舒缓</string>
    <string name="lsq_mixing_nosound">无效果</string>
    <string name="lsq_mixing_soundrecording">自己录音</string>
    <string name="lsq_start_audiotrecord_hint">长按录音</string>
    <string name="lsq_audio_record_complete">录音完成</string>
    <string name="lsq_audio_record_mintime">录制最短时间 1s</string>
    <string name="lsq_text_dubbing">配乐</string>
    <string name="lsq_audio_mixer_hint">\u3000\u3000请分别调节一下音乐音量大小，调节完毕后，点击 [生成音频混合] 即可生成一段新的混合音乐。记得要打开系统音量呦~</string>
    <string name="lsq_audio_mixer_start">开始音频混合</string>
    <string name="lsq_audio_mixer_delete">删除混合音频</string>
    <string name="lsq_audio_mixer_play">播放音频</string>
    <string name="lsq_audio_mixer_pause">暂停</string>
    <string name="lsq_audio_pitch_hint">\u3000\u3000请点击[开始录音]按钮开始录制音频，录制完成后点击[结束并播放录音]生成并播放音频文件。</string>
    <string name="lsq_audio_record_start">开始录音</string>
    <string name="lsq_audio_record_stop_and_play">结束并播放录音</string>
    <string name="lsq_camera_speed_rate_slow">慢</string>
    <string name="lsq_camera_speed_rate_slow2">极慢</string>
    <string name="lsq_camera_speed_rate_normal">标准</string>
    <string name="lsq_camera_speed_rate_fast">快</string>
    <string name="lsq_camera_speed_rate_fast2">极快</string>
    <string name="lsq_normal">正常</string>
    <string name="lsq_monster">怪兽</string>
    <string name="lsq_uncle">大叔</string>
    <string name="lsq_girl">女生</string>
    <string name="lsq_lolita">萝莉</string>
</resources>